--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -2,7 +2,6 @@ imports:
     - { resource: parameters.yml }
     - { resource: security.yml }
     - { resource: services.yml }
-    - { resource: security_fos_users.yml }
 
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
@@ -10,8 +9,7 @@ parameters:
     locale: en
 
 framework:
-    #esi: ~
-    translator: { fallbacks: ['%locale%'] }
+    translator:
     secret: '%secret%'
     router:
         resource: '%kernel.project_dir%/app/config/routing.yml'
@@ -68,13 +66,10 @@ swiftmailer:
     username: '%mailer_user%'
     password: '%mailer_password%'
     spool: { type: memory }
-
-# FOSUSER Configuration
 fos_user:
     db_driver: orm
     firewall_name: main
     user_class: AppBundle\Entity\User
     from_email:
-        address: admin@admin.com
-        sender_name: admin
-
+        address: mailer_user
+        sender_name: mailer_user
